@@ -1,4 +1,7 @@
 ================= Unreleased ==================
+; Feature ; Minor ; PyFMI ; #5521
+Added the possibility to directly retrieve a Scalar Variable class instance.
+
 ; Feature ; Minor ; Documentation; #5517 
 Added information on OPC to Users Guide.
 
